--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  inputs:
+    projects: '**/*.csproj'
+- script: |
+    dotnet restore
+    dotnet build --configuration $(buildConfiguration)
+    dotnet build $(buildConfiguration)
