--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: DotNetCoreInstaller@0
+  inputs:
+    version: '2.2.100-preview2-009404' # replace this value with the version that you need for your project
 - task: DotNetCoreCLI@2
   inputs:
     projects: '**/*.csproj'
