--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /src/AzureDevOps.Web/obj/AzureDevOps.Web.csproj.nuget.g.targets
 /src/AzureDevOps.Web/obj/AzureDevOps.Web.csproj.nuget.g.props
 /src/AzureDevOps.Web/obj/AzureDevOps.Web.csproj.nuget.cache
+/.vs/AzureDevOps/v15/Server/sqlite3
