--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,8 @@ variables:
 steps:
 - task: DotNetCoreInstaller@0
   inputs:
-    version: '2.2.100-preview2-009404' # replace this value with the version that you need for your project
-- task: DotNetCoreCLI@2
-  inputs:
-    projects: '**/*.csproj'
+    version: '2.2.100-preview2-009404'
 - script: |
-    dotnet restore
     dotnet build --configuration $(buildConfiguration)
+    dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
+    dotnet publish --configuration $(buildConfiguration)
