--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,10 @@ steps:
 - task: DotNetCoreInstaller@0
   inputs:
     version: '2.2.100-preview2-009404'
+    
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
-    dotnet publish --configuration $(buildConfiguration)
+    dotnet publish --output $(Build.ArtifactStagingDirectory)
+    
+- task: PublishBuildArtifacts@1
