--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,22 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
-trigger:
-- master
-
+# Build Docker image for this app using Azure Pipelines
+# http://docs.microsoft.com/azure/devops/pipelines/languages/docker?view=vsts
 pool:
-  vmImage: 'Ubuntu-16.04'
+  vmImage: 'Ubuntu 16.04'
 
 variables:
   buildConfiguration: 'Release'
+  imageName: 'dotnetcore:$(Build.BuildId)'
+  # define two more variables dockerId and dockerPassword in the build pipeline in UI
 
 steps:
-- task: DotNetCoreInstaller@0
-  inputs:
-    version: '2.2.100-preview2-009404'
-    
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
-    dotnet publish --output $(Build.ArtifactStagingDirectory)
-    
-- task: PublishBuildArtifacts@1
+    dotnet publish --configuration $(buildConfiguration) --output out
+    docker build -f Dockerfile -t $(dockerId)/$(imageName) .
+    docker login -u $(dockerId) -p $pswd $(server)
+    docker push $(dockerId)/$(imageName)
+  env:
+    pswd: $(dockerPassword)
+    server: $(dockerServer)
+
