--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -15,9 +15,9 @@ steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet publish --configuration $(buildConfiguration) --output out
-    docker build -f Dockerfile -t $(dockerId)/$(imageName) .
+    docker build -f Dockerfile -t $(imageName) .
     docker login -u $(dockerId) -p $pswd $(server)
-    docker push $(dockerId)/$(imageName)
+    docker push $(imageName)
   env:
     pswd: $(dockerPassword)
     server: $(dockerServer)
