Update azure-pipelines.docker.yml for Azure Pipelines

--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -16,9 +16,8 @@ steps:
     dotnet build --configuration $(buildConfiguration)
     dotnet publish --configuration $(buildConfiguration) --output out
     docker build -f Dockerfile -t $(imageName) .
-    docker login -u $(dockerId) -p $pswd $(server)
+    docker login -u $(dockerId) -p $pswd $(dockerServer)
     docker push $(imageName)
   env:
     pswd: $(dockerPassword)
-    server: $(dockerServer)
 
