--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -27,5 +27,10 @@ steps:
     rootDirectory: '$(System.DefaultWorkingDirectory)'
     targetFiles: 'docker-compose-template.yml'
 
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact'
+  inputs:
+    PathtoPublish: docker-compose-template.yml
+
 
 
