--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -5,7 +5,6 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  imageName: 'dotnetcore:$(Build.BuildId)'
   # define two more variables dockerId and dockerPassword in the build pipeline in UI
 
 steps:
@@ -15,10 +14,12 @@ steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet publish --configuration $(buildConfiguration) --output out
-    docker build -f Dockerfile -t $(imageName) .
+    docker build -f Dockerfile -t $imageName .
     docker login -u $(dockerId) -p $pswd $(dockerServer)
+    docker push $imageName
   env:
     pswd: $(dockerPassword)
+    imageName: '$(imageName):$(Build.BuildId)'
 
 - task: qetza.replacetokens.replacetokens-task.replacetokens@3
   displayName: 'Replace tokens Build.BuildId'
