--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -26,6 +26,8 @@ steps:
   inputs:
     rootDirectory: '$(System.DefaultWorkingDirectory)'
     targetFiles: 'docker-compose-template.yml'
+    tokenPrefix: '%{'
+    tokenSuffix: '}%'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact'
