--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -16,6 +16,7 @@ steps:
     dotnet publish --configuration $(buildConfiguration) --output out
     docker build -f Dockerfile -t $imageName .
     docker login -u $(dockerId) -p $pswd $(dockerServer)
+    docker tag $imageName $imageName
     docker push $imageName
   env:
     pswd: $(dockerPassword)
